Fix truncated text in code callout (#584)
* Fix code callouts

* cleanup

* Do the same for the # comment char

* Revert

--- a/src/Elastic.Markdown/Assets/markdown/code.css
+++ b/src/Elastic.Markdown/Assets/markdown/code.css
@@ -27,7 +27,8 @@
 			}
 		}
 		
-		pre code .code-callout .hljs-number {
+		pre code .code-callout {
+			@apply ml-1;
 			transform: translateY(-1px);
 			user-select: none;
 		}
@@ -47,8 +48,12 @@
 			left: calc(-1 * var(--spacing) * 6);
 		}
 	}
+	
+	pre code .code-callout .hljs-number {
+		@apply text-white!;
+	}
 
-	pre code .code-callout .hljs-number,
+	pre code .code-callout,
 	ol.code-callouts li::before {
 		@apply text-xs!
 			text-white!
